# LibretroDroid

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties  jitpack.yml  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio.cpp  audio.h  core.cpp  fpssync.cpp  gl_code.c  gl_code.cpp  libretrodroid.cpp  video.cpp  video.h
app/src/main/java/com/android/gl2jni/: GL2JNIActivity.java  GL2JNIView.java
app/src/main/java/com/swordfish/libretrodroid/: GL2JNIActivity.java  GL2JNIView.java  LibretroDroid.java  SampleActivity.java  SampleActivity.kt  VirtualGamePadConfigs.kt
app/src/main/res/layout/: sample_activity.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
libretrodroid/: build.gradle
libretrodroid/src/main/: AndroidManifest.xml
libretrodroid/src/main/cpp/: CMakeLists.txt  audio.cpp  audio.h  circularbuffer.cpp  circularbuffer.h  core.cpp  core.h  environment.cpp  environment.h  errorcodes.cpp  errorcodes.h  file.glsl  fpssync.cpp  fpssync.h  immersivemode.cpp  immersivemode.h  input.cpp  input.h  javautils.cpp  javautils.h  libretrodroid.cpp  libretrodroid.h  libretrodroidjni.cpp  libretrodroidjni.h  log.h  renderer.cpp  renderer.h  rumble.cpp  rumble.h  rumblestate.cpp  rumblestate.h  shadermanager.cpp  shadermanager.h  utils.c  utils.cpp  utils.h  vfile.glsl  video.cpp  video.h  videobackground.cpp  (+3 more)
libretrodroid/src/main/cpp/libretro/: libretro.h
libretrodroid/src/main/cpp/microphone/: microphone.cpp  microphone.h  microphoneinterface.cpp  microphoneinterface.h
libretrodroid/src/main/cpp/renderers/: baseimagerenderer.cpp  baseimagerenderer.h  renderer.cpp  renderer.h
libretrodroid/src/main/cpp/renderers/es2/: imagerendereres2.cpp  imagerendereres2.h
libretrodroid/src/main/cpp/renderers/es3/: es3utils.cpp  es3utils.h  framebufferrenderer.cpp  framebufferrenderer.h  imagerendereres3.cpp  imagerendereres3.h
libretrodroid/src/main/cpp/resamplers/: linearresampler.cpp  linearresampler.h  resampler.h  sincresampler.cpp  sincresampler.h
libretrodroid/src/main/cpp/utils/: javautils.cpp  javautils.h  jnistring.cpp  jnistring.h  libretrodroidexception.cpp  libretrodroidexception.h  rect.cpp  rect.h  utils.cpp  utils.h
libretrodroid/src/main/cpp/vfs/: fdwrapper.cpp  fdwrapper.h  vfs.cpp  vfs.h  vfsfile.cpp  vfsfile.h
libretrodroid/src/main/java/com/swordfish/libretrodroid/: AspectRatioGLSurfaceView.kt  Controller.kt  DetachedVirtualFile.kt  DisplayRefreshMeasure.kt  GLRetroShader.kt  GLRetroView.java  GLRetroView.kt  GLRetroViewData.kt  GamepadsManager.kt  ImmersiveMode.kt  KtUtils.kt  LibretroDroid.java  RetroException.kt  RumbleEvent.kt  ShaderConfig.kt  Variable.java  Variable.kt  VirtualFile.kt
libretrodroid/src/main/java/com/swordfish/libretrodroid/gamepad/: GamepadInfo.kt  GamepadsManager.kt
libretrodroid/src/main/res/values/: strings.xml
